--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,32 @@
     width: 100%;
     border-radius: 0%;
 }
+
+.avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
+/*rgb(178, 194, 1)*/
+
+.col-izq {
+    background: rgb(180, 194, 10);
+    color: white;
+
+}
+
+.nav-link {
+    color: white;
+    font-size: 20px;
+    font-family: 'Calibri', 'Trebuchet MS', sans-serif;
+}
+
+.nav-link:hover {
+    background-color: grey;
+    color: white; 
+}
+
+h6 {
+    font-size: 20px;
+}
