--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,11 @@
 
 :root {
     --color-verde-claro: rgb(229, 236, 150);
-    --color-verde-oscuro: rgb(61, 90, 35);
+    --color-verde-oscuro: rgb(84, 146, 31);
 }
 
 .color-verde {
-    background: var(--color-verde-claro);
+    background: var(--color-verde-oscuro);
 }
 
 .color-verde-oscuro {
@@ -54,8 +54,9 @@
 /*rgb(178, 194, 1)*/
 
 .col-izq {
-    background: rgb(180, 194, 10);
+    background-image: url(/img/fondo-perfil2.png);
     color: white;
+
 
 }
 
